// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for "inso --help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  -a, --appDataDir <dir>  set the app data directory (deprecated; use --src
                          instead)
  --config <path>         path to configuration file
  --verbose               show additional logs while running the command
  --src <file|dir>        set the app data source
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts
  -h, --help              display help for command

Commands:
  generate                Code generation utilities
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <name>           Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso -h" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  -a, --appDataDir <dir>  set the app data directory (deprecated; use --src
                          instead)
  --config <path>         path to configuration file
  --verbose               show additional logs while running the command
  --src <file|dir>        set the app data source
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts
  -h, --help              display help for command

Commands:
  generate                Code generation utilities
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <name>           Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso export -h" 1`] = `
"Usage: inso export [options] [command]

Export data from insomnia models

Options:
  -h, --help                   display help for command

Commands:
  spec [options] [identifier]  Export an API Specification to a file
  help [command]               display help for command"
`;

exports[`Snapshot for "inso export spec -h" 1`] = `
"Usage: inso export spec [options] [identifier]

Export an API Specification to a file

Options:
  -o, --output <path>  save the generated config to a file
  -h, --help           display help for command"
`;

exports[`Snapshot for "inso generate -h" 1`] = `
"Usage: inso generate [options] [command]

Code generation utilities

Options:
  -h, --help                     display help for command

Commands:
  config [options] [identifier]  Generate configuration from an api spec.
  help [command]                 display help for command"
`;

exports[`Snapshot for "inso generate config -h" 1`] = `
"Usage: inso generate config [options] [identifier]

Generate configuration from an api spec.

Options:
  -t, --type <value>    type of configuration to generate, options are
                        [declarative, kubernetes] (default: declarative)
  -f, --format <value>  format of configuration to generate, options are [yaml,
                        json] (default: yaml)
  --tags <tags>         comma separated list of tags to apply to each entity
  -o, --output <path>   save the generated config to a file
  -h, --help            display help for command"
`;

exports[`Snapshot for "inso help" 1`] = `
"Usage: inso [options] [command]

A CLI for Insomnia!

Options:
  -v, --version           output the version number
  -w, --workingDir <dir>  set working directory
  -a, --appDataDir <dir>  set the app data directory (deprecated; use --src
                          instead)
  --config <path>         path to configuration file
  --verbose               show additional logs while running the command
  --src <file|dir>        set the app data source
  --printOptions          print the loaded options
  --ci                    run in CI, disables all prompts
  -h, --help              display help for command

Commands:
  generate                Code generation utilities
  run                     Execution utilities
  lint                    Linting utilities
  export                  Export data from insomnia models
  script <name>           Run scripts defined in .insorc
  help [command]          display help for command"
`;

exports[`Snapshot for "inso lint -h" 1`] = `
"Usage: inso lint [options] [command]

Linting utilities

Options:
  -h, --help         display help for command

Commands:
  spec [identifier]  Lint an API Specification
  help [command]     display help for command"
`;

exports[`Snapshot for "inso lint spec -h" 1`] = `
"Usage: inso lint spec [options] [identifier]

Lint an API Specification

Options:
  -h, --help  display help for command"
`;

exports[`Snapshot for "inso run -h" 1`] = `
"Usage: inso run [options] [command]

Execution utilities

Options:
  -h, --help                   display help for command

Commands:
  test [options] [identifier]  Run Insomnia unit test suites
  help [command]               display help for command"
`;

exports[`Snapshot for "inso run test -h" 1`] = `
"Usage: inso run test [options] [identifier]

Run Insomnia unit test suites

Options:
  -e, --env <identifier>         environment to use
  -t, --testNamePattern <regex>  run tests that match the regex
  -r, --reporter <reporter>      reporter to use, options are [dot, list, min,
                                 progress, spec] (default: spec)
  -b, --bail                     abort (\\"bail\\") after first test failure
  --keepFile                     do not delete the generated test file
  --disableCertValidation        disable certificate validation for requests
                                 with SSL
  -h, --help                     display help for command"
`;
